Завершил верстку ВСЕХ основных страниц

--- a/src/pug/sections/_faq.pug
+++ b/src/pug/sections/_faq.pug
@@ -124,7 +124,4 @@ section.faq
                     .filter__education
                         h4.filter__title.title--aside Уровень образования
                         .filter__education-options
-                            span.filter__education-option IT
-                                button.filter__education-option--delete
-                            span.filter__education-option COVID-19
-                                button.filter__education-option--delete
+                            include ./select/_select
