--- a/src/pug/sections/_portfolio-tabs.pug
+++ b/src/pug/sections/_portfolio-tabs.pug
@@ -1,15 +1,15 @@
 section.portfolio-tabs
-    .portfolio-tabs__container.container
+    .portfolio-tabs__container.container.tabs__container
         .portfolio-tabs__header
             h2.portfolio-tabs__title.title--large Портфолио по профессиям
             span.divider
         .portfolio-tabs__buttons
-            button(data-id="college").btn.portfolio-tabs__button.portfolio-tabs__button--active Колледж
-            button(data-id="bachelor").btn.portfolio-tabs__button Бакалавриат
-            button(data-id="specialty").btn.portfolio-tabs__button Специалитет
-            button(data-id="magistracy").btn.portfolio-tabs__button Магистратура
-            button(data-id="graduate").btn.portfolio-tabs__button Аспирантура
-        .portfolio-tabs__article.portfolio-tabs__article--active(id="college")
+            button(data-id="college").btn.portfolio-tabs__button.tabs__button.tabs__button--active Колледж
+            button(data-id="bachelor").btn.portfolio-tabs__button.tabs__button Бакалавриат
+            button(data-id="specialty").btn.portfolio-tabs__button.tabs__button Специалитет
+            button(data-id="magistracy").btn.portfolio-tabs__button.tabs__button Магистратура
+            button(data-id="graduate").btn.portfolio-tabs__button.tabs__button Аспирантура
+        .portfolio-tabs__article.tabs__item.tabs__item--active(id="college")
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
@@ -77,7 +77,7 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-        .portfolio-tabs__article(id="bachelor")
+        .portfolio-tabs__article(id="bachelor").tabs__item
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
@@ -144,7 +144,7 @@ section.portfolio-tabs
                             span.portfolio__description Издательское дело
                             span.divider
                             span.portfolio__counter 21
-        .portfolio-tabs__article(id="specialty")
+        .portfolio-tabs__article(id="specialty").tabs__item
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
@@ -211,7 +211,7 @@ section.portfolio-tabs
                             span.portfolio__description Издательское дело
                             span.divider
                             span.portfolio__counter 21
-        .portfolio-tabs__article(id="magistracy")
+        .portfolio-tabs__article(id="magistracy").tabs__item
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
@@ -278,7 +278,7 @@ section.portfolio-tabs
                             span.portfolio__description Издательское дело
                             span.divider
                             span.portfolio__counter 21
-        .portfolio-tabs__article(id="graduate")
+        .portfolio-tabs__article(id="graduate").tabs__item
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
