--- a/src/pug/sections/dashboard/_hotels.pug
+++ b/src/pug/sections/dashboard/_hotels.pug
@@ -1,4 +1,6 @@
 section.hotels
+    .hotels__header.title-block
+        h2.hotels__title.title--large Общежития
     .hotels__tabs.tabs__container
         .hotels__buttons.tabs__buttons
             button(data-id="late").hotels__tab-btn.tabs__button.tabs__button--active.btn.btn--border Опоздание в общежитие
