--- a/src/scss/blocks/_ads.scss
+++ b/src/scss/blocks/_ads.scss
@@ -26,7 +26,7 @@
 .advertisement__wrapper {
   margin-bottom: 30px;
   .swiper-slide {
-    width: 100%;
+    width: 487px;
   }
   @media (min-width: $tablet) {
     .swiper-slide {
