--- a/src/scss/blocks/_hotels.scss
+++ b/src/scss/blocks/_hotels.scss
@@ -1,234 +1,230 @@
 //tabs
 
-
 .hotels__tab-wrapper {
-  background-color: $c-light;
-  border-radius: 4px;
-  margin-top: 27px;
-  box-sizing: border-box;
-  padding: 25px 18px 45px 35px;
-  color: $c-black;
+    background-color: $c-light;
+    border-radius: 4px;
+    margin-top: 27px;
+    box-sizing: border-box;
+    padding: 25px 18px 45px 35px;
+    color: $c-black;
 }
 
 .hotels__tab-title {
-  font-size: rem-calc(22);
-  line-height: 26px;
-  font-weight: 500;
-  padding: 0 0 7px;
-  margin: 0;
+    font-size: rem-calc(22);
+    line-height: 26px;
+    font-weight: 500;
+    padding: 0 0 7px;
+    margin: 0;
 }
 
 .hotels__form {
-  margin-top: 22px;
-  display: flex;
-  flex-wrap: wrap;
+    margin-top: 22px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .hotels__form-wrapper {
-  &--approve {
-    width: 100%;
-  }
+    &--approve {
+        width: 100%;
+    }
 }
 
 .hotels__form-label {
-  display: block;
-  font-size: rem-calc(16);
-  line-height: 26px;
-  margin-bottom: 2px;
-  color: $c-black;
-  &::after {
-    content: " *";
-    color: $c-red;
-  }
+    display: block;
+    font-size: rem-calc(16);
+    line-height: 26px;
+    margin-bottom: 2px;
+    color: $c-black;
+    &::after {
+        content: " *";
+        color: $c-red;
+    }
 }
 
 .hotels__form-input {
-  width: 176px;
-  height: 44px;
-  border: 1px solid #e4ecfa;
-  box-sizing: border-box;
-  border-radius: 3px;
-  padding: 9px 3px 8px 15px;
-  margin-right: 50px;
-  cursor: pointer;
-  &#reason {
-    width: 461px;
-    margin-right: 0;
-  }
-  &[type="date"]::-webkit-calendar-picker-indicator {
-    color: transparent;
-    opacity: 1;
-    background: url("../img/icons/calendar.svg") no-repeat center;
-    background-size: 20px;
+    width: 176px;
+    height: 44px;
+    border: 1px solid #e4ecfa;
+    box-sizing: border-box;
+    border-radius: 3px;
+    padding: 9px 3px 8px 15px;
+    margin-right: 50px;
     cursor: pointer;
-    padding-right: 9px;
-  }
-  &[type="time"]::-webkit-calendar-picker-indicator {
-    color: transparent;
-    opacity: 1;
-    background: url("../img/icons/timer.svg") no-repeat center;
-    background-size: 26px;
-    cursor: pointer;
-    padding-right: 9px;
-  }
-  &[type="file"] {
-    width: 0.1px;
-    height: 0.1px;
-    opacity: 0;
-    overflow: hidden;
-    position: absolute;
-    z-index: -1;
-  }
+    &#reason {
+        width: 461px;
+        margin-right: 0;
+    }
+    &[type="date"]::-webkit-calendar-picker-indicator {
+        color: transparent;
+        opacity: 1;
+        background: url("../img/icons/calendar.svg") no-repeat center;
+        background-size: 20px;
+        cursor: pointer;
+        padding-right: 9px;
+    }
+    &[type="time"]::-webkit-calendar-picker-indicator {
+        color: transparent;
+        opacity: 1;
+        background: url("../img/icons/timer.svg") no-repeat center;
+        background-size: 26px;
+        cursor: pointer;
+        padding-right: 9px;
+    }
+    &[type="file"] {
+        width: 0.1px;
+        height: 0.1px;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        z-index: -1;
+    }
 }
 
 .hotels__form-approve {
-  color: $c-black;
-  font-size: rem-calc(16);
-  line-height: 26px;
-  margin: 0;
-  margin-bottom: 5px;
-  margin-top: 41px;
+    color: $c-black;
+    font-size: rem-calc(16);
+    line-height: 26px;
+    margin: 41px 0 5px;
 }
 
 .hotels__form-file {
-  font-size: rem-calc(16);
-  line-height: 26px;
-  border-radius: 4px;
-  display: inline-block;
-  width: 170px;
-  height: 44px;
-  color: $c-blue;
-  cursor: pointer;
-  border: 1px solid $c-blue;
-  padding: 9px 45px 9px 16px;
-  position: relative;
-  transition: 0.2s;
-  margin-right: 15px;
-  svg {
-    fill: $c-blue;
-    position: absolute;
-    right: 23px;
-    top: 12px;
-  }
-  &:hover {
-    color: $c-light;
-    background: $c-blue;
+    font-size: rem-calc(16);
+    line-height: 26px;
+    border-radius: 4px;
+    display: inline-block;
+    height: 44px;
+    color: $c-blue;
+    cursor: pointer;
+    border: 1px solid $c-blue;
+    padding: 9px 51px 9px 16px;
+    position: relative;
+    transition: 0.2s;
+    margin-right: 15px;
     svg {
-      fill: $c-light;
+        fill: $c-blue;
+        position: absolute;
+        right: 23px;
+        top: 12px;
     }
-  }
+    &:hover {
+        color: $c-light;
+        background: $c-blue;
+        svg {
+            fill: $c-light;
+        }
+    }
 }
 .hotels__form-description {
-  font-size: rem-calc(14);
-  line-height: 21px;
-  color: $c-darkgrey;
+    font-size: rem-calc(14);
+    line-height: 21px;
+    color: $c-darkgrey;
 }
 
 .hotels__form-submit {
-  margin-top: 35px;
+    margin-top: 35px;
 }
 
 //table style
 
 .hotels__table {
-  border-collapse: collapse;
-  width: 100%;
+    border-collapse: collapse;
+    width: 100%;
 }
 
 .hotels__table-header {
-  border-bottom: 1px solid #e4ecfa;
-  display: flex;
+    border-bottom: 1px solid #e4ecfa;
+    display: flex;
 }
 
 .hotels__table-title {
-  font-size: rem-calc(22);
-  line-height: 26px;
-  color: $c-black;
-  font-weight: 500;
-  padding-bottom: 7px;
+    font-size: rem-calc(22);
+    line-height: 26px;
+    color: $c-black;
+    font-weight: 500;
+    padding-bottom: 7px;
 }
 
 .hotels__table-counter {
-  color: $c-light;
-  font-size: rem-calc(15);
-  line-height: 18px;
-  border-radius: 50%;
-  background: $c-red;
-  padding: 3px 4px;
+    color: $c-light;
+    font-size: rem-calc(15);
+    line-height: 18px;
+    border-radius: 50%;
+    background: $c-red;
+    padding: 3px 4px;
 }
 
 .hotels__table-row {
-  padding-top: 22px;
-  padding-bottom: 22px;
-  display: flex;
-  border-bottom: 1px solid #f1f4f9;
-  font-size: rem-calc(16);
-  line-height: 22px;
-  &:last-child {
-    border: none;
-  }
+    padding-top: 22px;
+    padding-bottom: 22px;
+    display: flex;
+    border-bottom: 1px solid #f1f4f9;
+    font-size: rem-calc(16);
+    line-height: 22px;
+    &:last-child {
+        border: none;
+    }
 }
 
 .hotels__table-col--time {
-  &::before {
-    content: " ";
-  }
+    &::before {
+        content: " ";
+    }
 }
 
 .hotels__table-col--date {
-  font-size: rem-calc(14);
-  line-height: 22px;
-  color: $c-darkgrey;
-  width: 113px;
+    font-size: rem-calc(14);
+    line-height: 22px;
+    color: $c-darkgrey;
+    width: 113px;
 }
 
 .hotels__table-col {
-  &--approve {
-    margin-left: auto;
-    color: $c-green;
-  }
-  &--notapprove {
-    margin-left: auto;
-    color: $c-red;
-  }
-  &--name {
-    margin-left: 40px;
-  }
+    &--approve {
+        margin-left: auto;
+        color: $c-green;
+    }
+    &--notapprove {
+        margin-left: auto;
+        color: $c-red;
+    }
+    &--name {
+        margin-left: 40px;
+    }
 }
 
 .hotels__tab-header {
-  display: flex;
-  border-bottom: 1px solid #e4ecfa;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    border-bottom: 1px solid #e4ecfa;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .hotels__tab-remains {
-  color: $c-green;
+    color: $c-green;
 }
 
 .hotels__tab-available {
-  color: $c-darkgrey;
+    color: $c-darkgrey;
 }
 
 .hotels__tab-today {
-  color: $c-darkgrey;
-  margin-left: auto;
-  margin-right: 19px;
+    color: $c-darkgrey;
+    margin-left: auto;
+    margin-right: 19px;
 }
 
 .hotels__tab-week {
-  @include btn-reset;
-  color: $c-blue;
-  border-bottom: 1px dotted $c-blue;
+    @include btn-reset;
+    color: $c-blue;
+    border-bottom: 1px dotted $c-blue;
 }
 
 //chart
 
 .hotels__chart {
-  margin-top: 32px;
+    margin-top: 32px;
 }
 
 .form__wash {
-  width: 452px;
+    width: 452px;
 }
