--- a/src/scss/blocks/_parent-cabinet.scss
+++ b/src/scss/blocks/_parent-cabinet.scss
@@ -1,172 +1,169 @@
 .parent-cabinet__container {
-  display: flex;
-  gap: 30px;
-  padding-top: 11px;
+    display: flex;
+    gap: 30px;
+    padding-top: 11px;
 }
 
 .parent-cabinet__wrapper {
-  @media (min-width: $tablet) {
-	max-width: 1005px;
-  }
+    @media (min-width: $tablet) {
+        max-width: 1005px;
+    }
 }
 
 .parent-cabinet__title {
-  margin-bottom: 21px;
+    margin-bottom: 21px;
 }
 
 .parent-cabinet__buttons {
-  margin-bottom: 16px;
+    margin-bottom: 16px;
 }
 
 .parent-cabinet__tabs {
-  margin-bottom: 38px;
-  display: inline-block;
-  width: 100%;
+    margin-bottom: 38px;
+    display: inline-block;
+    width: 100%;
 }
 
-
 .parent-cabinet__tab-wrapper {
-  padding: 0 24px;
-  background-color: $c-light;
-  border-radius: 4px;
+    padding: 0 24px;
+    background-color: $c-light;
+    border-radius: 4px;
 }
 
 .parent-cabinet__aside {
-  width: 315px;
-  display: flex;
-  flex-direction: column;
-  gap: 45px;
-  .portfolio-cards__wrapper {
-	margin: 0;
-  }
-   .card {
-	width: 315px;
-	margin: 0 ;
-  }
-  .portfolio__container {
-	width: 100%;
-  }
+    width: 315px;
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
+    .portfolio-cards__wrapper {
+        margin: 0;
+    }
+    .card {
+        width: 315px;
+        margin: 0;
+    }
+    .portfolio__container {
+        width: 100%;
+    }
 }
 .parent-cabinet__aside-title {
-  margin-bottom: -24px;
+    margin-bottom: -24px;
 }
 
 .parent-cabinet__finance-preheader {
-  font-size: 22px;
-  line-height: 34px;
-  text-align: center;
-  color: #6E7781
+    font-size: 22px;
+    line-height: 34px;
+    text-align: center;
+    color: #6e7781;
 }
 
 .parent-cabinet__finance-number {
-  font-size: 20px;
-  text-align: center;
-  color: #6E7781
+    font-size: 20px;
+    text-align: center;
+    color: #6e7781;
 }
 
 .parent-cabinet__table-date {
-  margin-top: 16px;
-  padding-bottom: 32px;
-  text-align: right;
-  font-size: 12px;
-  line-height: 14px;
-  color: #C3CAD6;
+    margin-top: 16px;
+    padding-bottom: 32px;
+    text-align: right;
+    font-size: 12px;
+    line-height: 14px;
+    color: #c3cad6;
 }
 
 .parent-cabinet__table-title {
-  padding-left: 0;
+    padding-left: 0;
 }
 
-
 .parent-cabinet__table {
-  padding-top: 27px;
-  min-height: 474px;
+    min-height: 474px;
 }
 
 //toggle
 
 #iOS {
-  visibility: hidden;
-  position: absolute;
+    visibility: hidden;
+    position: absolute;
 }
 .parent-cabinet__tab-toggle {
-  display: block;
-  position: relative;
-  top: 50%;
-  margin: 0 12px;
-  background: #F1F4F9;
-  width: 49px;
-  height: 28px;
-  cursor: pointer;
-  will-change: background;
-  &.parent-cabinet__tab-toggle {
-	border-radius: 50px;
-	position: relative;
-	transition: 0s background 0.25s ease-in-out;
-	&:before{
-	  position: absolute;
-	  top: 0;
-	  left: 0;
-	  height: 100%;
-	  width: 100%;
-	  background-color: #fff;
-	  content: '';
-	  display: block;
-	  border-radius: 100px;
-	  box-shadow: inset 0 10px 30px rgba(#F1F4F9, 1);
-	  transition: all 0.25s ease-in-out;
-	  will-change: background;
-	}
-	&:after {
-	  position: absolute;
-	  display: block;
-	  content: '';
-	  height: 22px;
-	  width: 22px;
-	  top: 3px;
-	  left: 4px;
-	  background-color: #3464E0;
-	  border-radius: 100px;
-	  transition: all 0.25s ease-in-out;
-	  transform: translateX(0px);
-	  box-shadow: 0 10px 30px rgba(black, 0.2);
-	}
-	&:active {
-	  &:after {
-		width: 40px;
-	  }
-	}
-  }
+    display: block;
+    position: relative;
+    top: 50%;
+    margin: 0 12px;
+    background: #f1f4f9;
+    width: 49px;
+    height: 28px;
+    cursor: pointer;
+    will-change: background;
+    &.parent-cabinet__tab-toggle {
+        border-radius: 50px;
+        position: relative;
+        transition: 0s background 0.25s ease-in-out;
+        &:before {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            background-color: #fff;
+            content: "";
+            display: block;
+            border-radius: 100px;
+            box-shadow: inset 0 10px 30px rgba(#f1f4f9, 1);
+            transition: all 0.25s ease-in-out;
+            will-change: background;
+        }
+        &:after {
+            position: absolute;
+            display: block;
+            content: "";
+            height: 22px;
+            width: 22px;
+            top: 3px;
+            left: 4px;
+            background-color: #3464e0;
+            border-radius: 100px;
+            transition: all 0.25s ease-in-out;
+            transform: translateX(0px);
+            box-shadow: 0 10px 30px rgba(black, 0.2);
+        }
+        &:active {
+            &:after {
+                width: 40px;
+            }
+        }
+    }
 }
 #iOS:checked + label.parent-cabinet__tab-toggle {
-  background-color: #40E699;
-  transition: 0s background 0s ease-in-out;
-  &:after {
-	transform: translateX(20px);
-  }
-  &:active:after {
-	transform: translateX(0px);
-  }
-  &:before {
-	transform:  translateX(7px) scale(0.1)
-  }
+    background-color: #40e699;
+    transition: 0s background 0s ease-in-out;
+    &:after {
+        transform: translateX(20px);
+    }
+    &:active:after {
+        transform: translateX(0px);
+    }
+    &:before {
+        transform: translateX(7px) scale(0.1);
+    }
 }
 
 .parent-cabinet__tab-togglers {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 27px;
-  padding-bottom: 27px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 27px;
+    padding-bottom: 27px;
 }
 
 .parent-cabinet__tab-toggler {
-  cursor: pointer;
-  &--even {
-    color: $c-blue;
-  }
+    cursor: pointer;
+    &--even {
+        color: $c-blue;
+    }
 }
 
 .parent-cabinet__tab-schedule {
-  padding-bottom: 30px;
+    padding-bottom: 30px;
 }
